--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ body {
  main {
      background: rgba(0,0,0,.05)
  }
+ section {
+     padding: 3em 1em;
+ }
+
  /* HERO SECTION*/
  .hero {
      background-color: rgba(0,102,204,1);
@@ -71,6 +75,7 @@ body {
     max-width: 30em;
     margin: 1em auto;
 }
+
 /* COURSES SECTION*/
 .courses {
     padding: 6em 1em;
@@ -90,6 +95,28 @@ footer {
     border-top: 1px solid rgba(0,0,0,.05);
     padding: 1em;
 }
+/* LAYOUT */
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+ }
+
+ @media (min-width: 760px){
+    .two-col-sidebar {
+        display: grid;
+        grid-template-columns: 25% 75%;
+    }
+    .two-col-sidebar aside {
+        border-right: 1px solid rgba(0,0,0,.1);
+    }
+ }
+
+ aside {
+     padding: 0 1em;
+ }
+ .primary {
+     padding: 0 1em;
+ }
 /* SOCIAL NAV */
 .social-nav ul {
     margin: 0;
@@ -101,6 +128,52 @@ footer {
 .social-nav  a {
     display: block;
     padding: 1em;
+}
+
+ /* STYLING FOR SUBPAGES*/
+  .page-sub .hero {
+     background-color: rgba(0,0,0,0.1);
+     color: rgba(0,0,0,0.8);
+  }
+
+  /* COURSE PAGES WITH MULTIPLE PROJECT LISTS*/
+  .coursework {
+      padding: 3em 1em;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+     }
+     .project {
+         margin: 2em;
+     }
+
+     /* CODE BLOCKS */
+
+pre code {
+    width: 100%;
+    display: block;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    padding: 1em 3em;
+    margin-bottom: 1em;
+    line-height: 1.5;
+  }
+
+.markup-box {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 1em 3em;
+    margin-bottom: 1em;
+}
+
+/* DEFINITION LISTS */
+dt {
+    font-weight: bold;
+    margin-top: 1em;
+}
+dd {
+    margin: 0;
 }
 /* FOR DEV PURPOSES */
 /* body * {
